Use new token strategy
